--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "math-magicians-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/jaferIdrees/math-magicians-react",
+  "homepage": "/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -21,8 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    
+    "deploy": "serve -s build"
   },
   "eslintConfig": {
     "extends": [
